--- a/altrio/pubspec.yaml
+++ b/altrio/pubspec.yaml
@@ -35,10 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  retrofit: ^3.3.1
+  json_annotation: ^4.7.0
+  dio : any
+  lottie: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  retrofit_generator: ^4.2.0
+  build_runner: ^2.3.3
+  json_serializable : any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/animation/loading_animation.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -74,11 +82,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+     - family: Poppins
+       fonts:
+         - asset: assets/font/Poppins/Poppins-Thin.ttf
+         - asset: assets/font/Poppins/Poppins-SemiBold.ttf
+         - asset: assets/font/Poppins/Poppins-Regular.ttf
+         - asset: assets/font/Poppins/Poppins-Medium.ttf
+         - asset: assets/font/Poppins/Poppins-Light.ttf
+         - asset: assets/font/Poppins/Poppins-ExtraLight.ttf
+         - asset: assets/font/Poppins/Poppins-ExtraBold.ttf
+         - asset: assets/font/Poppins/Poppins-Bold.ttf
+         - asset: assets/font/Poppins/Poppins-Black.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
